fixes issue with icon alignment
Former-commit-id: 73765fd6efa81b5cab51384c643e88075ead0c04
Former-commit-id: 68b7bd9375b7e990f416df7b4c06d5e8314f1803

--- a/node/src/files/components/semantic/views/items.css
+++ b/node/src/files/components/semantic/views/items.css
@@ -119,7 +119,7 @@
   z-index: 10;
   width: 1.4em;
   height: 1.5em;
-  padding: 0.1em 0.1em 0em 0em;
+  padding: 0.25em 0.1em 0em 0em;
   color: #AAAAAA;
   font-size: 0.9em;
   text-align: center;
